--- a/index.html
+++ b/index.html
@@ -87,7 +87,18 @@
                     <span class="text-xs text-gray-600">微信</span>
                 </div>
             </div>
-
+            <!-- 论坛图标 -->
+<div class="col-span-4 flex justify-end mt-6">
+    <div class="flex flex-col items-center gap-1"
+         onclick="openForum()">
+        <div class="app-icon overflow-hidden p-0">
+            <img src="https://i.postimg.cc/ZnjMz01G/quality-restoration-20260228202408361.png"
+                 class="w-full h-full object-cover rounded-[15px]">
+        </div>
+        <span class="text-xs text-gray-600">论坛</span>
+    </div>
+</div>
+            
         </div>
 
         <!-- 底栏 -->
