--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
         .moments-name { color: white; font-weight: bold; position: absolute; right: 100px; bottom: 10px; text-shadow: 0 1px 2px rgba(0,0,0,0.5); }
 
         /* 微信“我”页面还原样式 - 深度定制版 */
-        .wx-me-header { padding: 25px 24px 20px 24px; background: white; display: flex; flex-direction: column; align-items: flex-start; }
-        .wx-me-avatar-rect { width: 72px; height: 72px; border-radius: 50%; object-fit: cover; background: #f0f0f0; margin-bottom: 16px; cursor: pointer; }
+        /* UI调整：Padding-top 从 25px 增加到 30px 确保整体下移 5px */
+        .wx-me-header { padding: 30px 24px 20px 24px; background: white; display: flex; flex-direction: column; align-items: flex-start; }
+        /* UI调整：头像宽高增加 5px，从 72px 变为 77px */
+        .wx-me-avatar-rect { width: 77px; height: 77px; border-radius: 50%; object-fit: cover; background: #f0f0f0; margin-bottom: 16px; cursor: pointer; }
         .wx-status-tag { display: inline-flex; align-items: center; border: 1px solid #e8e8e8; border-radius: 20px; padding: 2px 10px; font-size: 12px; color: #666; cursor: pointer; transition: all 0.2s; background: #fdfdfd; }
         .wx-status-tag:active { background: #f2f2f2; }
         .wx-status-dot { width: 6px; height: 6px; background: #07c160; border-radius: 50%; margin-right: 6px; }
@@ -190,7 +192,7 @@
                     <img id="wx-me-avatar" src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg" class="wx-me-avatar-rect" onclick="editProfilePart('avatar')">
                     
                     <div class="flex items-center gap-3">
-                        <span class="text-[24px] font-bold text-black" id="wx-me-name" onclick="editProfilePart('name')">{{user}}</span>
+                        <span class="text-[24px] font-semibold text-black" id="wx-me-name" onclick="editProfilePart('name')">{{user}}</span>
                         <div class="wx-status-tag" onclick="editStatus()">
                             <span class="wx-status-dot"></span>
                             <span id="wx-me-status">状态</span>
@@ -221,7 +223,7 @@
                         <span class="wx-chevron">〉</span>
                     </div>
                 </div>
-                <div class="flex-1 bg-[#f0f0f0] min-h-[200px]"></div>
+                <div class="flex-1 bg-white min-h-[200px]"></div>
             </div>
         </div>
 
