--- a/index.html
+++ b/index.html
@@ -103,57 +103,59 @@
 <body class="h-screen overflow-hidden flex flex-col">
 
     <div id="home-screen" class="flex-1 p-6 flex flex-col items-center">
-        <div class="widget-card mb-12 mt-4">
-            <div class="flex items-start gap-10">
-                <div class="flex flex-col items-center gap-1">
-                    <span class="widget-emoji" onclick="editEmoji('left')">(⸝⸝๑  ̫ ๑⸝⸝)</span>
-                    <img id="avatar-left" class="widget-avatar" src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg" onclick="changeAvatar('left')">
-                </div>
-                <div class="flex flex-col items-center gap-1">
-                    <span class="widget-emoji" onclick="editEmoji('right')">(˶⁃ ω ⁃˶)</span>
-                    <img id="avatar-right" class="widget-avatar" src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg" onclick="changeAvatar('right')">
-                </div>
-            </div>
-            <div id="widget-text" class="widget-text" onclick="editWidgetText()">我不想隔着屏幕和你说话</div>
-        </div>
-
-        <div class="flex w-full px-1 gap-5 mt-2 justify-between items-start z-10">
-            
-            <div class="w-[160px] h-[160px] rounded-[24px] border-[1.5px] border-[#333] p-2.5 flex flex-col relative bg-transparent transition-transform active:scale-95 cursor-default">
-                <div class="flex-1 bg-[#5c5c5c] rounded-[16px] flex items-center justify-center text-black text-[28px] font-black mb-2.5 shadow-sm overflow-hidden relative cursor-pointer" onclick="alert('照片展示功能待开发')">
-                    <span class="relative z-10 tracking-widest font-sans">照片</span>
-                </div>
-                <div class="h-[42px] flex gap-2">
-                    <div class="flex-1 border-[1.5px] border-[#333] rounded-[14px] flex flex-col justify-center items-start pl-2 pr-1 text-[11px] font-bold text-[#333] leading-[1.2]">
-                        <div id="widget-date-display" class="tracking-widest">♥ 月 - 日</div>
-                        <div id="widget-time-display" class="tracking-widest mt-[2px]">★ 时 : 分</div>
+        <div class="w-full flex flex-col items-center" style="transform: translateY(-20px);">
+            <div class="widget-card mb-12 mt-4">
+                <div class="flex items-start gap-10">
+                    <div class="flex flex-col items-center gap-1">
+                        <span class="widget-emoji" onclick="editEmoji('left')">(⸝⸝๑  ̫ ๑⸝⸝)</span>
+                        <img id="avatar-left" class="widget-avatar" src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg" onclick="changeAvatar('left')">
                     </div>
-                    <div class="w-[42px] border-[1.5px] border-[#333] rounded-full flex items-center justify-center text-[11px] font-bold text-[#333] cursor-pointer hover:bg-gray-100 transition-colors" onclick="alert('文本编辑待开发')">
-                        文本
+                    <div class="flex flex-col items-center gap-1">
+                        <span class="widget-emoji" onclick="editEmoji('right')">(˶⁃ ω ⁃˶)</span>
+                        <img id="avatar-right" class="widget-avatar" src="https://i.postimg.cc/Qx8Y1m3R/IMG-2980.jpg" onclick="changeAvatar('right')">
                     </div>
                 </div>
+                <div id="widget-text" class="widget-text" onclick="editWidgetText()">我不想隔着屏幕和你说话</div>
             </div>
 
-            <div class="flex-1 grid grid-cols-2 gap-x-2 gap-y-4 place-items-end pt-0 pr-1">
-                <div class="flex flex-col items-center gap-1 w-[60px]" onclick="openPlaceholder(1)">
-                    <div class="app-icon bg-[#5c5c5c] w-[60px] h-[60px] rounded-[15px] shadow-sm"></div>
-                    <span class="text-xs text-gray-600">占位1</span>
-                </div>
-                <div class="flex flex-col items-center gap-1 w-[60px]" onclick="openChat()">
-                    <div class="app-icon overflow-hidden p-0 w-[60px] h-[60px] rounded-[15px] shadow-sm">
-                        <img src="https://i.postimg.cc/fycLsZLY/quality-restoration-20260228193355205.png" class="w-full h-full object-cover rounded-[15px]">
+            <div class="flex w-full px-1 gap-5 mt-2 justify-between items-start z-10">
+                
+                <div class="w-[160px] h-[160px] rounded-[24px] border-[1.5px] border-[#333] p-2.5 flex flex-col relative bg-transparent transition-transform active:scale-95 cursor-default">
+                    <div class="flex-1 bg-[#5c5c5c] rounded-[16px] flex items-center justify-center text-black text-[28px] font-black mb-2.5 shadow-sm overflow-hidden relative cursor-pointer" onclick="alert('照片展示功能待开发')">
+                        <span class="relative z-10 tracking-widest font-sans">照片</span>
                     </div>
-                    <span class="text-xs text-gray-600">微信</span>
-                </div>
-                <div class="flex flex-col items-center gap-1 w-[60px]" onclick="openPlaceholder(2)">
-                    <div class="app-icon bg-[#5c5c5c] w-[60px] h-[60px] rounded-[15px] shadow-sm"></div>
-                    <span class="text-xs text-gray-600">占位2</span>
-                </div>
-                <div class="flex flex-col items-center gap-1 w-[60px]" onclick="openForum()">
-                    <div class="app-icon overflow-hidden p-0 w-[60px] h-[60px] rounded-[15px] shadow-sm">
-                        <img src="https://i.postimg.cc/ZnjMz01G/quality-restoration-20260228202408361.png" class="w-full h-full object-cover rounded-[15px]">
+                    <div class="h-[42px] flex gap-2">
+                        <div class="flex-1 border-[1.5px] border-[#333] rounded-[14px] flex flex-col justify-center items-start pl-2 pr-1 text-[11px] font-bold text-[#333] leading-[1.2]">
+                            <div id="widget-date-display" class="tracking-widest">♥ 月 - 日</div>
+                            <div id="widget-time-display" class="tracking-widest mt-[2px]">★ 时 : 分</div>
+                        </div>
+                        <div class="w-[42px] border-[1.5px] border-[#333] rounded-full flex items-center justify-center text-[11px] font-bold text-[#333] cursor-pointer hover:bg-gray-100 transition-colors" onclick="alert('文本编辑待开发')">
+                            文本
+                        </div>
                     </div>
-                    <span class="text-xs text-gray-600">论坛</span>
+                </div>
+
+                <div class="flex-1 grid grid-cols-2 gap-x-2 gap-y-4 place-items-end pt-0 pr-1">
+                    <div class="flex flex-col items-center gap-1 w-[60px]" onclick="openPlaceholder(1)">
+                        <div class="app-icon bg-[#5c5c5c] w-[60px] h-[60px] rounded-[15px] shadow-sm"></div>
+                        <span class="text-xs text-gray-600">占位1</span>
+                    </div>
+                    <div class="flex flex-col items-center gap-1 w-[60px]" onclick="openChat()">
+                        <div class="app-icon overflow-hidden p-0 w-[60px] h-[60px] rounded-[15px] shadow-sm">
+                            <img src="https://i.postimg.cc/fycLsZLY/quality-restoration-20260228193355205.png" class="w-full h-full object-cover rounded-[15px]">
+                        </div>
+                        <span class="text-xs text-gray-600">微信</span>
+                    </div>
+                    <div class="flex flex-col items-center gap-1 w-[60px]" onclick="openPlaceholder(2)">
+                        <div class="app-icon bg-[#5c5c5c] w-[60px] h-[60px] rounded-[15px] shadow-sm"></div>
+                        <span class="text-xs text-gray-600">占位2</span>
+                    </div>
+                    <div class="flex flex-col items-center gap-1 w-[60px]" onclick="openForum()">
+                        <div class="app-icon overflow-hidden p-0 w-[60px] h-[60px] rounded-[15px] shadow-sm">
+                            <img src="https://i.postimg.cc/ZnjMz01G/quality-restoration-20260228202408361.png" class="w-full h-full object-cover rounded-[15px]">
+                        </div>
+                        <span class="text-xs text-gray-600">论坛</span>
+                    </div>
                 </div>
             </div>
         </div>
