--- a/index.html
+++ b/index.html
@@ -158,6 +158,43 @@
                     </div>
                 </div>
             </div>
+
+            <div class="w-full mt-10 px-2 flex flex-col relative z-10 cursor-pointer" onclick="openChat()">
+                <div class="flex justify-between items-center px-12 mb-3">
+                    <div class="relative">
+                        <div class="absolute -top-3 -left-4 border-[1px] border-[#777] rounded-full px-3 py-0.5 text-[11px] italic text-[#555] bg-[#f0f0f0] z-10 font-serif">
+                            char
+                        </div>
+                        <div class="w-[72px] h-[72px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-black text-[22px] font-normal shadow-sm">
+                            头像
+                        </div>
+                    </div>
+                    <div class="relative">
+                        <div class="absolute -top-3 -right-4 border-[1px] border-[#777] rounded-full px-3 py-0.5 text-[11px] italic text-[#555] bg-[#f0f0f0] z-10 font-serif">
+                            user
+                        </div>
+                        <div class="w-[72px] h-[72px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-black text-[22px] font-normal shadow-sm">
+                            头像
+                        </div>
+                    </div>
+                </div>
+
+                <div class="flex flex-col gap-2 w-full px-4 mt-2">
+                    <div class="flex items-end justify-start">
+                        <div class="border-[1.5px] border-[#333] rounded-[18px] px-4 py-1.5 text-[15px] text-[#333] bg-transparent font-medium">
+                            文本文本文本文本文本文本
+                        </div>
+                        <span class="text-[10px] text-gray-500 ml-1.5 mb-1">已读</span>
+                    </div>
+                    <div class="flex items-end justify-end mt-1">
+                        <span class="text-[10px] text-gray-500 mr-1.5 mb-1">未读</span>
+                        <div class="bg-black rounded-[18px] px-4 py-1.5 text-[15px] text-white font-medium">
+                            文本文本文本文本文本
+                        </div>
+                    </div>
+                </div>
+            </div>
+
         </div>
 
         <div class="mt-auto glass-card w-full py-4 px-8 flex justify-between items-center mb-4" style="transform: translateY(20px);">
