--- a/index.html
+++ b/index.html
@@ -120,16 +120,16 @@
 
             <div class="flex w-full px-1 gap-5 mt-2 justify-between items-start z-10">
                 
-                <div class="w-[160px] h-[160px] rounded-[24px] border-[1.5px] border-[#333] p-2.5 flex flex-col relative bg-transparent transition-transform active:scale-95 cursor-default">
+                <div class="w-[160px] h-[160px] rounded-[24px] bg-white p-2.5 flex flex-col relative transition-transform active:scale-95 cursor-default">
                     <div class="flex-1 bg-[#5c5c5c] rounded-[16px] flex items-center justify-center text-black text-[28px] font-black mb-2.5 shadow-sm overflow-hidden relative cursor-pointer" onclick="alert('照片展示功能待开发')">
                         <span class="relative z-10 tracking-widest font-sans">照片</span>
                     </div>
                     <div class="h-[42px] flex gap-2">
-                        <div class="flex-1 border-[1.5px] border-[#333] rounded-[14px] flex flex-col justify-center items-start pl-2 pr-1 text-[11px] font-bold text-[#333] leading-[1.2]">
+                        <div class="flex-1 border-[1px] border-[#DEDEDE] rounded-[14px] flex flex-col justify-center items-start pl-2 pr-1 text-[11px] font-bold text-[#333] leading-[1.2]">
                             <div id="widget-date-display" class="tracking-widest">♥ 月 - 日</div>
                             <div id="widget-time-display" class="tracking-widest mt-[2px]">★ 时 : 分</div>
                         </div>
-                        <div class="w-[42px] border-[1.5px] border-[#333] rounded-full flex items-center justify-center text-[11px] font-bold text-[#333] cursor-pointer hover:bg-gray-100 transition-colors" onclick="alert('文本编辑待开发')">
+                        <div class="w-[42px] border-[1px] border-[#DEDEDE] rounded-full flex items-center justify-center text-[11px] font-bold text-[#333] cursor-pointer hover:bg-gray-100 transition-colors" onclick="alert('文本编辑待开发')">
                             文本
                         </div>
                     </div>
@@ -161,24 +161,24 @@
 
             <div class="w-full mt-10 relative px-2">
                 <div class="flex justify-between px-10 mb-4">
-                    <div class="flex flex-col items-center gap-2">
-                        <span class="text-[11px] italic text-gray-600 border border-gray-500 rounded-full px-3 py-[1px] leading-tight">char</span>
-                        <div class="w-[64px] h-[64px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-[#111] font-bold text-[18px] tracking-widest shadow-sm">头像</div>
+                    <div class="flex flex-col items-center gap-2 translate-x-[15px]">
+                        <span class="text-[11px] italic text-gray-600 bg-white shadow-sm rounded-full px-4 py-1 leading-tight">char</span>
+                        <div class="w-[54px] h-[54px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-[#111] font-bold text-[18px] tracking-widest shadow-sm">头像</div>
                     </div>
-                    <div class="flex flex-col items-center gap-2">
-                        <span class="text-[11px] italic text-gray-600 border border-gray-500 rounded-full px-3 py-[1px] leading-tight">user</span>
-                        <div class="w-[64px] h-[64px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-[#111] font-bold text-[18px] tracking-widest shadow-sm">头像</div>
+                    <div class="flex flex-col items-center gap-2 -translate-x-[15px]">
+                        <span class="text-[11px] italic text-gray-600 bg-white shadow-sm rounded-full px-4 py-1 leading-tight">user</span>
+                        <div class="w-[54px] h-[54px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-[#111] font-bold text-[18px] tracking-widest shadow-sm">头像</div>
                     </div>
                 </div>
                 
                 <div class="w-full flex flex-col gap-3">
                     <div class="flex items-end gap-1 ml-4">
-                        <div class="border-[1.5px] border-[#333] rounded-full px-4 py-1.5 text-[13px] text-[#333] tracking-wider bg-transparent">文本文本文本文本文本文本</div>
+                        <div class="bg-white shadow-sm rounded-full px-4 py-1 text-[13px] text-[#333] tracking-wider">文本文本文本文本文本文本</div>
                         <span class="text-[9px] text-gray-400 mb-[4px]">已读</span>
                     </div>
                     <div class="flex items-end justify-end gap-1 mr-4">
                         <span class="text-[9px] text-gray-400 mb-[4px]">未读</span>
-                        <div class="bg-black text-white rounded-full px-4 py-1.5 text-[13px] tracking-wider">文本文本文本文本文本</div>
+                        <div class="bg-white shadow-sm rounded-full px-4 py-1 text-[13px] text-[#333] tracking-wider">文本文本文本文本文本</div>
                     </div>
                 </div>
             </div>
