--- a/index.html
+++ b/index.html
@@ -162,14 +162,14 @@
             <div class="w-full mt-10 relative px-2">
                 <div class="flex justify-between px-10 mb-4">
                     <div class="flex flex-col items-center relative translate-x-[35px] -translate-y-[3px]">
-                        <span id="badge-char" class="absolute -left-[45px] top-[5px] text-[11px] italic text-gray-600 bg-white shadow-sm flex items-center justify-center cursor-pointer border border-gray-500" style="border-radius: 50%; width: 40px; height: 26px;" onclick="editAnyText('badge-char')">char</span>
-                        <div class="w-[59px] h-[59px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-[#111] font-bold text-[18px] tracking-widest shadow-sm cursor-pointer overflow-hidden" onclick="changeAnyImage(this)">
+                        <span id="badge-char" class="absolute -left-[55px] -top-[3px] text-[11px] italic text-gray-600 bg-white shadow-sm flex items-center justify-center cursor-pointer" style="border-radius: 50%; width: 37px; height: 23px;" onclick="editAnyText('badge-char')">char</span>
+                        <div class="w-[55px] h-[55px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-[#111] font-bold text-[18px] tracking-widest shadow-sm cursor-pointer overflow-hidden" onclick="changeAnyImage(this)">
                             <span class="pointer-events-none">头像</span>
                         </div>
                     </div>
                     <div class="flex flex-col items-center relative -translate-x-[35px] -translate-y-[3px]">
-                        <span id="badge-user" class="absolute -right-[45px] top-[5px] text-[11px] italic text-gray-600 bg-white shadow-sm flex items-center justify-center cursor-pointer border border-gray-500" style="border-radius: 50%; width: 40px; height: 26px;" onclick="editAnyText('badge-user')">user</span>
-                        <div class="w-[59px] h-[59px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-[#111] font-bold text-[18px] tracking-widest shadow-sm cursor-pointer overflow-hidden" onclick="changeAnyImage(this)">
+                        <span id="badge-user" class="absolute -right-[55px] -top-[3px] text-[11px] italic text-gray-600 bg-white shadow-sm flex items-center justify-center cursor-pointer" style="border-radius: 50%; width: 37px; height: 23px;" onclick="editAnyText('badge-user')">user</span>
+                        <div class="w-[55px] h-[55px] rounded-full bg-[#5c5c5c] flex items-center justify-center text-[#111] font-bold text-[18px] tracking-widest shadow-sm cursor-pointer overflow-hidden" onclick="changeAnyImage(this)">
                             <span class="pointer-events-none">头像</span>
                         </div>
                     </div>
@@ -177,12 +177,12 @@
                 
                 <div class="w-full flex flex-col gap-3">
                     <div class="flex items-end gap-1 ml-4">
-                        <div id="mock-msg-1" class="bg-white shadow-sm rounded-full px-4 py-1 text-[13px] text-[#333] tracking-wider w-fit max-w-[75%] break-words cursor-pointer border border-gray-500" onclick="editAnyText('mock-msg-1')">文本文本文本文本文本文本</div>
+                        <div id="mock-msg-1" class="bg-white shadow-sm rounded-full px-4 py-0.5 text-[13px] text-[#333] tracking-wider w-fit max-w-[75%] break-words cursor-pointer" onclick="editAnyText('mock-msg-1')">文本文本文本文本文本文本</div>
                         <span id="mock-status-1" class="text-[9px] text-gray-400 mb-0 whitespace-nowrap cursor-pointer" onclick="editAnyText('mock-status-1')">已读</span>
                     </div>
                     <div class="flex items-end justify-end gap-1 mr-4">
                         <span id="mock-status-2" class="text-[9px] text-gray-400 mb-0 whitespace-nowrap cursor-pointer" onclick="editAnyText('mock-status-2')">未读</span>
-                        <div id="mock-msg-2" class="bg-black shadow-sm rounded-full px-4 py-1 text-[13px] text-white tracking-wider w-fit max-w-[75%] break-words cursor-pointer" onclick="editAnyText('mock-msg-2')">文本文本文本文本文本</div>
+                        <div id="mock-msg-2" class="bg-black shadow-sm rounded-full px-4 py-0.5 text-[13px] text-white tracking-wider w-fit max-w-[75%] break-words cursor-pointer" onclick="editAnyText('mock-msg-2')">文本文本文本文本文本</div>
                     </div>
                 </div>
             </div>
